Salary predicted with age

--- a/PR_M1.ipynb
+++ b/PR_M1.ipynb
@@ -136,6 +136,32 @@
     "plt.scatter(X,y)\n",
     "plt.plot(X,lin_reg_2.predict(X_poly),color='blue')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[28440.90909091]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(lin_reg.predict([[25.5]]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(lin_reg_2.predict(poly_reg.fit_transform([[25.5]])))"
+   ]
   }
  ],
  "metadata": {
